# pypi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: lint.sh
src/pypi/: __init__.py  clients.py  types.py
tests/clients/: test_pypi_client.py
tests/fixtures/: README.md  fetch_examples.py  numpy_latest.json  requests_2.31.0.json  requests_latest.json
