[project]
name = "pypi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "harupy", email = "17039389+harupy@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = ["httpx>=0.28.1", "typing-extensions>=4.14.1", "packaging>=24.0"]

[project.scripts]
pypi = "pypi:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.12.5",
]

[tool.ruff]
line-length = 100
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = false
